# riot-tech-challenge

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  tests.yml
src/: main.py  utils.py
src/api/: crypto.py  health.py
src/core/: algorithms.py  dependencies.py  middleware.py  settings.py
src/schemas/: crypto.py
src/services/: base64_encryption.py  encryption_service.py  exceptions.py  hmac_signing.py  protocols.py  rot13_encryption.py  signing_service.py
tests/: test_dependencies.py  test_encryption.py  test_endpoints.py  test_readme_examples.py  test_signing.py  test_utils.py
