[project]
name = "riot-tech-challenge"
version = "0.1.0"
description = "Take Home Tech Challenge for riot"
authors = [
    {name = "Griveau Jordan",email = "jordan@worklife.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.0"
httpx = "^0.28.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
